k8s/jenkins-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
