k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: auth

  template:
    metadata:
      labels:
        app: auth

    spec:
      containers:
        - name: auth
          image: manoharn0441/auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
