k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: order

  template:
    metadata:
      labels:
        app: order

    spec:
      containers:
        - name: order
          image: manoharn0441/order-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3003
