k8s/order-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service

spec:
  type: NodePort

  selector:
    app: order

  ports:
    - port: 3003
      targetPort: 3003
      nodePort: 30009
