k8s/user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service

spec:
  type: NodePort

  selector:
    app: user

  ports:
    - port: 3002
      targetPort: 3002
      nodePort: 30008
